[package]
name = "import_wp"
version = "0.1.0"
edition = "2021"

[dependencies]
mysql = "23.0.1"
chrono = { version = "0.4.38", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
tokio = { version = "1.40.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["cors", "trace"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
scraper = "0.21.0"
image = "0.25.5"
webp = "0.3.0"
axum = { version = "0.7.9", features = ["multipart"] }
